--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-animate": "^1.7.5",
     "core-js": "^2.5.4",
     "mongoose": "^5.3.7",
     "rxjs": "^6.0.0",
