--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "angular-animate": "^1.7.5",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "mongoose": "^5.3.7",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
